Added support for android devices. Added a platform parameter on the /room endpoint to determine which platform is requesting to switch the ip address of the web socket server

--- a/Services/SignalingService/src/templates/index.html
+++ b/Services/SignalingService/src/templates/index.html
@@ -48,5 +48,6 @@
         <h2 id="roomID" hidden>{{.RoomID}}</h2>
         <h2 id="audioEnabled" hidden>{{.AudioEnabled}}</h2>
         <h2 id="videoEnabled" hidden>{{.VideoEnabled}}</h2>
+        <h2 id="platform" hidden>{{.Platform}}</h2>
     </body>
 </html>
