--- a/Services/SignalingService/src/public/css/style.css
+++ b/Services/SignalingService/src/public/css/style.css
@@ -1,4 +1,13 @@
+html {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
 body{
+    width: 100%;
+    height: 100%;
     background-color: #303030;
     margin: 0;
     padding: 0;
@@ -8,11 +17,12 @@ body{
  * This video should cover all the body
  */
 .remote-video {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     margin: 0;
     padding: 0;
+    object-fit: fill;
     width: 100%;
     height: 100%;
 }
